--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/alkhatim/ems#readme",
   "dependencies": {
+    "config": "^3.2.2",
     "express": "^4.17.1",
     "joi": "^14.3.1",
     "mongoose": "^5.6.9",
