--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "config": "^3.2.2",
     "express": "^4.17.1",
     "joi": "^14.3.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.6.9",
     "nodemon": "^1.19.1"
   }
