remove a keyword from package.json

--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   },
   "keywords": [
     "HR",
-    "ERP",
-    "Human_resources"
+    "ERP"
   ],
   "author": "alkhatim",
   "license": "ISC",
