--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "joi": "^14.3.1",
     "joi-objectid": "^2.0.0",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mongoose": "^5.6.9",
     "nodemon": "^1.19.1"
