--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   },
   "homepage": "https://github.com/alkhatim/ems#readme",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "config": "^3.2.2",
     "express": "^4.17.1",
     "joi": "^14.3.1",
     "joi-objectid": "^2.0.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mongoose": "^5.6.9",
