--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcrypt": "^3.0.6",
     "config": "^3.2.2",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "joi": "^14.3.1",
     "joi-objectid": "^2.0.0",
     "joi-password-complexity": "^3.1.0",
