--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "server": "nodemon index",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -22,7 +24,9 @@
   },
   "homepage": "https://github.com/alkhatim/ems#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.0",
     "bcrypt": "^3.0.6",
+    "concurrently": "^5.0.2",
     "config": "^3.2.2",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
@@ -31,6 +35,7 @@
     "joi-password-complexity": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
+    "materialize-css": "^1.0.0-rc.2",
     "moment": "^2.24.0",
     "mongoose": "^5.6.9",
     "nodemon": "^1.19.1",
