--- a/package.json
+++ b/package.json
@@ -40,5 +40,9 @@
     "mongoose": "^5.7.5",
     "nodemon": "^1.19.1",
     "winston": "^3.2.1"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.17.0"
   }
 }
