--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "moment": "^2.24.0",
     "mongoose": "^5.7.5",
     "nodemon": "^1.19.1",
+    "saslprep": "^1.0.3",
     "winston": "^3.2.1"
   },
   "devDependencies": {
