--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.1",
     "joi": "^14.3.1",
     "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.15",
     "materialize-css": "^1.0.0-rc.2",
     "moment": "^2.24.0",
     "react": "^16.12.0",
