--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.1",
+    "chart.js": "^2.9.3",
     "joi": "^14.3.1",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.15",
@@ -15,6 +16,7 @@
     "materialize-css": "^1.0.0-rc.2",
     "moment": "^2.24.0",
     "react": "^16.12.0",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.12.0",
     "react-loading-overlay": "^1.0.1",
     "react-redux": "^7.1.3",
