--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,10 +10,12 @@
     "SharedArrayBuffer": "readonly"
   },
   "parserOptions": {
+    "sourceType": "module",
+    "allowImportExportEverywhere": true,
     "ecmaFeatures": {
       "jsx": true
     },
-    "ecmaVersion": 2018
+    "ecmaVersion": 11
   },
   "plugins": ["react"],
   "rules": {}
