--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,7 @@
     "react-loading-overlay": "^1.0.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.4.0",
     "react-spinners": "^0.8.0",
     "react-toastify": "^5.5.0",
     "redux": "^4.0.5",
